Fixed bug in empty blocks.